[gd_scene load_steps=17 format=4 uid="uid://b1lmnvw6snyte"]

[ext_resource type="Script" uid="uid://bdr34117sxqs0" path="res://Scripts/door.gd" id="1_k65k4"]
[ext_resource type="Material" uid="uid://b3uhrde53umn7" path="res://resources/materials/MAT_wall_wood.tres" id="2_lnww3"]
[ext_resource type="Material" uid="uid://bekop88d10ubu" path="res://resources/materials/metal.tres" id="3_1h7vw"]
[ext_resource type="AudioStream" uid="uid://biff0qeli8ekd" path="res://assets/audio/sfx/door/door_open.mp3" id="4_ddfkg"]
[ext_resource type="AudioStream" uid="uid://dhwyflovr4yqs" path="res://assets/audio/sfx/door/321087__benjaminnelan__door-locked.wav" id="4_k4vsv"]
[ext_resource type="AudioStream" uid="uid://cs801dew7dbl0" path="res://assets/audio/sfx/door/door_close.mp3" id="5_drus2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_awui1"]
size = Vector3(0.2, 2.5, 1.3000001)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lucnx"]
resource_name = "WOOD"
cull_mode = 2
albedo_color = Color(0.27265033, 0.16470455, 0.078718886, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_bkxl3"]
_surfaces = [{
"aabb": AABB(0.0032487102, -0.0076296413, -1.4348569, 0.129514, 2.5308998, 1.43486),
"format": 34896613377,
"index_count": 372,
"index_data": PackedByteArray("AAABAAIAAAACAAMAAAAEAAEAAgAFAAMAAgABAAUAAAADAAYABAAAAAYABgADAAUAAQAEAAcABAAGAAcAAQAHAAUABgAFAAcACAAJAAoACAALAAkACQALAAwACwAIAA0ACwANAAwACQAMAA4ADQAOAAwACgAJAA4ADQAPAA4ACgAOAA8ACAAQAA0AEAAPAA0AEQAIAAoACAARABAAEgAKAA8AEQAKABIAEgAPABMAEAATAA8AFAASABMAEQAVABAAFQATABAAFAATABYAFQAWABMAFwASABQAFwARABIAFwAUABYAEQAXABUAFwAWABUAGAAZABoAGAAaABsAGAAcABkAGgAdABsAGgAZAB0AGAAbAB4AHAAYAB4AHgAbAB0AGQAcAB8AHAAeAB8AGQAfAB0AHgAdAB8AIAAhACIAIAAiACMAIAAkACEAIgAlACMAIgAhACUAIAAjACYAJAAgACYAJgAjACUAIQAkACcAJAAmACcAIQAnACUAJgAlACcAKAApACoAKAAqACsAKAAsACkAKgAtACsAKgApAC0AKAArAC4ALAAoAC4ALgArAC0AKQAsAC8ALAAuAC8AKQAvAC0ALgAtAC8AMAAxADIAMAAyADMAMAA0ADEAMgA1ADMAMgAxADUAMAAzADYANAAwADYANgAzADUAMQA0ADcANAA2ADcAMQA3ADUANgA1ADcAOAA5ADoAOAA6ADsAOAA8ADkAOgA9ADsAOgA5AD0AOAA7AD4APAA4AD4APgA7AD0AOQA8AD8APAA+AD8AOQA/AD0APgA9AD8AQABBAEIAQABCAEMAQABEAEEAQgBFAEMAQgBBAEUAQABDAEYARABAAEYARgBDAEUAQQBEAEcARABGAEcAQQBHAEUARgBFAEcASABJAEoASABKAEsASABMAEkASgBNAEsASgBJAE0ASABLAE4ATABIAE4ATgBLAE0ASQBMAE8ATABOAE8ASQBPAE0ATgBNAE8A"),
"name": "WOOD",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("w22e0SLtAAD//4fSzRIAAP//ntEi7QAA//+QwHHtAADDbYfSzRIAAP//ecEcEwAAw22QwHHtAADDbXnBHBMAAAAA/v8AAAAAaePFAAAAAABp4/7/AAAAAAAAxQAAAAAAAADFAEkRAAAAABD5OQwAAGnjxQBJEQAAaeMQ+TkMAAAAABD5xfMAAAAA///+/wAAaeP///7/AABp4xD5xfMAAGnjxQD//wAAAADFALXuAABp48UAte4AAAAAxQD//wAA9T1LAQfvAAB6pZT56u4AAEWMRgEH7wAAP4wHAeTEAAAqV5n56u4AAHSlVfnHxAAA7j0MAeTEAAAjV1v5x8QAADIzBgFvwgAAg4FV+VHCAACDgQYBb8IAAIOBxwBMmAAAMjNV+VHCAACDgRb5L5gAADIzxwBMmAAAMjMW+S+YAACMSsMA1pUAAN2YEvm5lQAA3ZjDANaVAADdmIQAtGsAAIxKEvm5lQAA3ZjU+JZrAACMSoQAtGsAAIxK1PiWawAAD1uBAD5pAABgqdD4IWkAAGCpgQA+aQAAYKlCABs/AAAPW9D4IWkAAGCpkfj+PgAAD1tCABs/AAAPW5H4/j4AADIzPgCmPAAAg4GN+Ik8AACDgT4ApjwAAIOBAACDEgAAMjON+Ik8AACDgU/4ZhIAADIzAACDEgAAMjNP+GYSAADEbZJi2+wAAP//NWGHEgAA//+SYtvsAAD//4VRt+0AAMRtNWGHEgAA//8oUGMTAADEbYVRt+0AAMRtKFBjEwAAxG0aJiLtAAD//wMnzRIAAP//GiYi7QAA//8MFXHtAADEbQMnzRIAAP//9RUcEwAAxG0MFXHtAADEbfUVHBMAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_u2vld"]
resource_name = "modular_medieval_house_Cube_168"
_surfaces = [{
"aabb": AABB(0.0032487102, -0.0076296413, -1.4348569, 0.129514, 2.5308998, 1.43486),
"attribute_data": PackedByteArray("L6XQx4iKpYmD5APMAYAEiS+lA8yIigSJg+TQxwGApYkYpdDHE5WliWzkA8yNigSJbOTQx42KpYkYpQPME5UEiRDvA8yG7NP2VubQx/rtc/dW5gPM+u3T9hDv0MeG7HP3W541llang5WX3USf1rHxlkSexp9Qp/GWrt2yld2xg5WZ7tDHOel6+d/lA8yW6Az43+XQxznpDPiZ7gPMluh6+a7dspVRp4OVRJ7Gn8Sc8ZaX3USfS6fxllueNZbLnIOV/v9IwV/OWrZsfdDHE+Rgtf7/0MdfzmC1bH1IwRPkWrZsfUjBzPlatv//0McY5GC1bH3Qx8z5YLX//0jBGORatoOYu8Bz2HL4wuJDxxvMePeDmEPHc9h498Liu8AbzHL4c/xIwVa14K1sfdDHc8rmrGx9SMFzyuCtc/zQx1a15qxsfUjBupXK9XP80MedgND0c/xIwZ2AyvVsfdDHupXQ9A6cu8D75G/4N99Dx9HZdfc337vA0dlv+A6cQ8f75HX3qLq17HKBQPGdwDXnnYBG8Ki6NeedgEDxncC17HKBRvBsfT+ctZX//3P8I6CYgGr/bH2/obWVLP///z+cAYD//2x9qu21labnc/zH6ZiAO+hsfSvotZV56P7/qu0BgKbnIuMxfAGApudunBSAmIA785ffFICYgDvo4pgxfAGA0POdwEmbb6VN8ai6yaBspnvwncDJoG+le/CoukmbbKZN8f7/qu0BgNXzbH0r6LWVqPRz/MfpmIBq9Gx9qu21ldXz4pgxfAGA//+X3xSAmIBq9G6cFICYgGr/IuMxfAGA1fP//z+cAYDQ82x9v6G1lf3yc/wjoJiAO/NsfT+ctZXQ86eVrcKZy/7CMeIIxHu2qMKnlQjEmcuowjHircJ7tv7ClJWtwoHA34od4gjEY6uJih3ircJjq9+KlJUIxIHAiYpUqQjEbeeS7bGwrcJl5ejtsbAIxGXlku1Uqa3Cbefo7aeVU65RzfTqHeJstmni9OyUlWa2TM307DHiWa5v4vTqT6mtwtz74tussAjE1PmN26ywrcLU+eLbT6kIxNz7jdsx4lmukff06pSVZrZu4vTsHeJstoz39OynlVOuc+L06uR9FsSg6laM7fxVxoLVAIzkfVXGoOoAjO38FsSC1VaMxH0WxH3VVozN/FXGX8AAjM38FsRfwFaMxH1Vxn3VAIydq1XGYPvm1da3FsS3++bX1rdVxmD75tedqxbEt/vm1eR9fbCfk5TlzfztvbeolOfEfeS9mZOU5+38h7C8qJTllasWxCT7ccnOt1XGHPkbyc63FsQc+XHJlatVxiT7G8nt/Iew3r2U5cR95L28qJTnzfztvdm9lOfkfX2wwaiU5X6VrcJg+jTLCOIIxELl3sp+lQjEYPreygjircJC5TTLa5Wtwsbq34r04QjEqNWJivThrcKo1d+Ka5UIxMbqiYrquAjEJPvSyUfArcIc+SjKR8AIxBz50snquK3CJPsoyn6Var+igN779OGDx7qV3v1rlX3HnYDe/QjicL/Ald775bitwpHd6O1CwAjEiduS7ULArcKJ2+jt5bgIxJHdku0I4nC/wJXZ+WuVfcedgNn79OGDx7qV2ft+lWq/ooDZ+aB9FsSk1d+KqfxVxobAiYqgfVXGpNWJiqn8FsSGwN+KgH0WxFSh/sKJ/FXGNoyowon8FsQ2jP7CgH1VxlShqMJ8xVXGJPt2ybXRFsQc+czJtdFVxhz5dsl8xRbEJPvMyaB928zjvZTlifxL2vvSlOeAfULa3r2U56n85MwA05Tlc8UWxP//n7is0VXGp/+fuqzRFsT//5+6c8VVxqf/n7ip/OTMIuiU5YB9QtoA05TnifxL2h3olOegfdvMBdOU5X59FsR3tv7Ch/xVxlmhqMJ+fVXGd7aowof8FsRZof7CXn0WxLzg/sJn/FXGnsuowmf8FsSey/7CXn1VxrzgqMJr0lXG7/u/s6TeFsTm+RW0pN5Vxub5v7Nr0hbE7/sVtH59CtuigNT3Z/x66LqV1PlefXHonYDU+Yf8E9u/ldT3Y9IWxPrktfyb3lXGo+S1/pveFsT65LX+Y9JVxqPktfyH/BPbv5XO9V59ceidgM/3Z/x66LqVz/d+fQrbooDP9S+l0MdAv6WJg+QDzLm0BYkvpQPMQL8FiYPk0Me5tKWJGKXQxymqpYls5APMo58FiWzk0Mejn6WJGKUDzCmqBYmstQPM1fbT9vKs0MdI+HP38qwDzEj40/astdDH1fZz91ueJNU/koOVl90y3sCc8ZZEnrXeOZLxlq7dodTGnIOVNbXQx3bpN/R7rAPM0+jJ8nus0Md26cnyNbUDzNPoN/Su3aHUO5KDlUSetd6uh/GWl90y3jSS8ZZbniTVtIeDlS+l0Me1tKWJg+QDzC6qBYkvpQPMtbQFiYPk0McuqqWJGKXQx56fpYls5APMGJUFiWzk0McYlaWJGKUDzJ6fBYlRlwPMK71C8JeO0MefvuPwl44DzJ++QvBRl9DHK73j8FuebfZtvIOVl918/+3G8ZZEnv//Zrzxlq7d6vX0xoOV2pbQxw3GBPAgjgPMgMdj7yCO0MeAxwTw2pYDzA3GY++u3er1aLyDlUSe///bsfGWl918/2K88ZZbnm324rGDlQ=="),
"format": 34896613431,
"index_count": 372,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkATABNAE4ATABPAE0AUABRAFIAUABTAFEAVABVAFYAVABXAFUAWABZAFoAWABbAFkAXABdAF4AXABfAF0AYABhAGIAYABjAGEAZABlAGYAZABnAGUAaABpAGoAaABrAGkAbABtAG4AbABvAG0AcABxAHIAcABzAHEAdAB1AHYAdAB3AHUAeAB5AHoAeAB7AHkAfAB9AH4AfAB/AH0AgACBAIIAgACDAIEAhACFAIYAhACHAIUAiACJAIoAiACLAIkAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACXAJUAmACZAJoAmACbAJkAnACdAJ4AnACfAJ0AoAChAKIAoACjAKEApAClAKYApACnAKUAqACpAKoAqACrAKkArACtAK4ArACvAK0AsACxALIAsACzALEAtAC1ALYAtAC3ALUAuAC5ALoAuAC7ALkAvAC9AL4AvAC/AL0AwADBAMIAwADDAMEAxADFAMYAxADHAMUAyADJAMoAyADLAMkAzADNAM4AzADPAM0A0ADRANIA0ADTANEA1ADVANYA1ADXANUA2ADZANoA2ADbANkA3ADdAN4A3ADfAN0A4ADhAOIA4ADjAOEA5ADlAOYA5ADnAOUA6ADpAOoA6ADrAOkA7ADtAO4A7ADvAO0A8ADxAPIA8ADzAPEA9AD1APYA9AD3APUA"),
"material": SubResource("StandardMaterial3D_lucnx"),
"name": "WOOD",
"primitive": 3,
"uv_scale": Vector4(2.0640597, 1.8823254, 1.9706279, 1.9998591),
"vertex_count": 248,
"vertex_data": PackedByteArray("w22e0SLti+P//4fSzRJd3P//ntEi7cexw22H0s0SfPHDbZDAce0OHP//ecEcE9sjw215wRwTTw7//5DAce2ZTv//h9LNEgUFw215wRwTxAT//3nBHBOlJsNth9LNEnsm//+e0SLtnrH//3nBHBMx3P//kMBx7Y2x//+H0s0SUNzDbZ7RIu2SwP//kMBx7QLAw22QwHHttdH//57RIu0z0cNth9LNEmUOw22QwHHtSRzDbXnBHBNtDsNtntEi7TkcAAD+/wAAkCZp48UAAACQJmnj/v8AAOQEAADFAAAA5AQAAMUA//9z0Wnj///+/3TRaePFAP//SsAAAP///v9KwAAA///+/77jaeP+/wAAQNxp4////v+VsQAA/v8AAJXxAAAQ+TkMPNVp48UASRH6vwAAxQBJEaHRaeMQ+TkMPMgAAMUAte4UBWnjEPnF8w0qAAAQ+cXzAxtp48UAte5ZJgAAEPnF86IHaeMQ+TkMFUsAABD5OQxqCmnjEPnF88kyAADFAP//v1dp48UAte4yHgAAxQC17jIeaePFAP//wFdp48UA//9KwGnjEPnF88XVaePFALXun9lp4////v9z0QAAxQAAAOQEAAAQ+TkMGisAAMUASRG1LgAA/v8AAJAmAAD+/wAAaQ4AABD5xfOeBwAAEPk5DGwKAAD///7/QRxp48UAAABsHgAAxQBJEfNXaePFAEkR9FcAAMUAAABrHmnj/v8AABr7aePFAEkRSsBp4xD5OQyKyGnjxQAAAG7ZaeP///7/lbFp4xD5OQzqtGnjEPnF8zXNaeP+/wAAQNwAAP///v+0PwAAxQC17uUEAAAQ+cXzxBoAAMUA//+LLvU9SwEH7ybReqWU+eruZtFFjEYBB+8hwCpXmfnq7iHA7j0MAeTE7QR0pVX5x8QNBSNXW/nHxG0mP4wHAeTEuSZ6pZT56u5usSNXW/nHxMLxdKVV+cfEP9wqV5n56u7I40WMRgEH7yLAdKVV+cfE8fo/jAcB5MRF2XqllPnq7mfR9T1LAQfvSxw/jAcB5MS7I+49DAHkxJQORYxGAQfvP04qV5n56u7fP+49DAHkxO0EI1db+cfEbSb1PUsBB+/aLjIzBgFvwlTRg4FV+VHCk9GDgQYBb8JKwDIzVflRwkrAMjPHAEyY1ASDgRb5L5j0BDIzFvkvmGkmg4HHAEyYtiaDgVX5UcKNsTIzFvkvmNnxg4EW+S+YSNwyM1X5UcL344OBBgFvwkvAg4EW+S+YC/uDgccATJhJ2YOBVflRwpTRMjMGAW/CehyDgccATJjEIzIzxwBMmKwOg4EGAW/CYE4yM1X5UcK2PzIzxwBMmNUEMjMW+S+YaSYyMwYBb8KtLoxKwwDWlVTR3ZgS+bmVk9HdmMMA1pVKwIxKEvm5lUrAjEqEALRr1ATdmNT4lmv0BIxK1PiWa2km3ZiEALRrtibdmBL5uZWNsYxK1PiWa9nx3ZjU+JZrSNyMShL5uZX3492YwwDWlUvA3ZjU+JZrC/vdmIQAtGtJ2d2YEvm5lZTRjErDANaVehzdmIQAtGvEI4xKhAC0a6wO3ZjDANaVYE6MShL5uZW2P4xKhAC0a9UEjErU+JZraSaMSsMA1pWtLg9bgQA+aVTRYKnQ+CFpk9FgqYEAPmlKwA9b0PghaUrAD1tCABs/1ARgqZH4/j70BA9bkfj+PmkmYKlCABs/tiZgqdD4IWmNsQ9bkfj+PtnxYKmR+P4+SNwPW9D4IWn342CpgQA+aUvAYKmR+P4+C/tgqUIAGz9J2WCp0PghaZTRD1uBAD5pehxgqUIAGz/EIw9bQgAbP6wOYKmBAD5pYE4PW9D4IWm2Pw9bQgAbP9UED1uR+P4+aSYPW4EAPmmtLjIzPgCmPFTRg4GN+Ik8k9GDgT4ApjxKwDIzjfiJPErAMjMAAIMS1ASDgU/4ZhL0BDIzT/hmEmkmg4EAAIMStiaDgY34iTyNsTIzT/hmEtnxg4FP+GYSSNwyM434iTz344OBPgCmPEvAg4FP+GYSC/uDgQAAgxJJ2YOBjfiJPJTRMjM+AKY8ehyDgQAAgxLEIzIzAACDEqwOg4E+AKY8YE4yM434iTy2PzIzAACDEtUEMjNP+GYSaSYyMz4ApjytLsRtkmLb7OLj//81YYcSpNz//5Ji2+wCssRtNWGHEh3yxG2FUbftYxz//yhQYxMjJMRtKFBjE+8O//+FUbft1E7//zVhhxJqBcRtKFBjE1wE//8oUGMTPCfEbTVhhxLiJf//kmLb7Nux//8oUGMT6dv//4VRt+1Tsf//NWGHEpjcxG2SYtvsDcH//4VRt+2Iv8RthVG37cLR//+SYtvsJ9HEbTVhhxLEDcRthVG37Z4cxG0oUGMTCw/EbZJi2+ziG8RtGiYi7Yvj//8DJ80SXdz//xomIu3HscRtAyfNEnzxxG0MFXHtDhz///UVHBPbI8Rt9RUcE08O//8MFXHtmU7//wMnzRIFBcRt9RUcE8UE///1FRwTpSbEbQMnzRJ7Jv//GiYi7Z6x///1FRwTMdz//wwVce2Nsf//AyfNElDcxG0aJiLtksD//wwVce0CwMRtDBVx7bXR//8aJiLtM9HEbQMnzRJlDsRtDBVx7UkcxG31FRwTbQ7EbRomIu05HD7wZiZKsVMgKsa4F7PkdULkWQ5wOF+EMfA9aGTUZzhGPDWBKDLLI9dTNe1ESsu6uiHG8xd4X2YxEGhCRmixlCDr+MTIeAc3N2fQkPkFMCYGheRHQspZKXDDPZVkJPBNJvrK57oENRlFBDWvKPrKUdcx0LP5zS9MBkUHODe4+MXIJ/BBJmaxjSAwxvEXjuRCQnfUSuOPBwo3idB8+Y8f2S+6ymvX9yt5N0DOkdi1NDNFXzwtdSJxJiNLTeF39G/MG55CGq+GC2hYlieHixsvYj1FBzg3WSxMNx01AUXNL0wG+spR1zDUduNT0LH5+srnuo7kQkJiPCt1TE3gdyfwQSahC01YwUJRr1EvPT2wJ5+LBDWvKEUH/zY5H+8vBDUZRTDG8RchcSUj9W/MG2axjSC4+MXI98ov14/OWdgx0LP5VNB++fEvVAY9Bys38fhiyBrLSdfpNOsoDcvKut00bkX4xUUYOOQMQiexrSDO7yUmOwcsN+k06ijbNG5F7y9WBqNZgHCQX6YxiT3iZGJoaUbv+GLIGMtK1wrLy7pT0H75VNCc+fEvMwZdBwA30fiOyPzKa9cHNcoo78oDu/o0NEU1xlkYYeQnQmCx0SDo7y4mWwcBNwY1yij4NDVF7y81BqxZZXC2X20xoj26ZHZoLkbQ+I3I+8ps1+3KBLtT0J75VNCc+fEvMwZdBwA30fiOyPzKa9cHNcoo78oDu/o0NEU1xlkYYeQnQmCx0SDo7y4mWwcBNwY1yij4NDVF7y81BqxZZXC2X20xoj26ZHZoLkbQ+I3I+8ps1+3KBLtT0J75VNCc+fEvMwZdBwA30fiOyPzKa9cHNcoo78oDu/o0NEU1xlkYYeQnQmCx0SDo7y4mWwcBNwY1yij4NDVF7y81BqxZZXC2X20xoj26ZHZoLkbQ+I3I+8ps1+3KBLtT0J75VNCc+fEvMwZdBwA30fiOyPzKa9cHNcoo78oDu/o0NEU1xlkYYeQnQmCx0SDo7y4mWwcBNwY1yij4NDVF7y81BqxZZXC2X20xoj26ZHZoLkbQ+I3I+8ps1+3KBLtT0J75q+9wJgKxvyAnxpEYbuR9Qu1ZpXCkX8ox+D2vZLJoOUajNYsomMsr17s1+USvy8e6H8bMGONfrDHsaENGIbH/IIj5F8gWCIk2L9EN+c4wpAVA5FBC1Fm/cMw922SR71YmPvBmJkqxUyAqxrgXs+R1QuRZDnA4X4Qx8D1oZNRnOEY8NYEoMssk11M17URKy7q6IcbzF3hfZjEQaEJGaLGUIOv4xMh4Bzc3Z9CQ+QUwJgaF5EdCylkpcMM9lWQk8E0m")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_bkxl3")

[sub_resource type="BoxOccluder3D" id="BoxOccluder3D_wren3"]
size = Vector3(0.05711992, 2.5533645, 1.4571596)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wndd0"]

[sub_resource type="ArrayMesh" id="ArrayMesh_l4msw"]
_surfaces = [{
"aabb": AABB(-0.11333319, -0.058092535, -0.037475884, 0.29149863, 0.12245808, 0.06784458),
"format": 34896613377,
"index_count": 216,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAAAEAAEABQAEAAAABQAAAAMABQAGAAQABgABAAQABwAFAAMABwAGAAUACAADAAIAAQAIAAIABwADAAkACgAHAAkACgAGAAcAAwALAAkACgAJAAsAAwAIAAsADAAKAAsACwAIAAwADAANAAoADQAMAAgADQAIAA4AAQAOAAgAAQANAA4ADwAKAA0ADwANAAEADwAGAAoABgAQAAEADwABABAABgARABAAEgAQABEAEAASABMAEAATAA8AEgARABQABgAVABEAFAARABUAFgAVAAYABgAPABcAFgAGABcADwAYABcAFgAXABkAFwAYABkAGgAVABYAFAAVABoAFgAZABsAGwAZABgAGgAWABwAFgAbABwAFAAaAB0AHQAaABwAHAAbAB4AHAAeAB0AGwAYAB8AHgAbAB8ADwAgABgAHwAYACAADwATACAAHwAgACEAIQAeAB8AIQAgABMAHQAeACIAIQAiAB4AHQAiACMAFAAdACMAJAAiACEAIQATACQAIwAiACQAEwAlACQAIwAkACUAIwAlABQAEwASACUAEgAUACUA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 38,
"vertex_data": PackedByteArray("qEkoQ2qVAACpQihD/v8AAKlCKENqlQAAIElTdmqVAACoSShD/v8AACBJU3b//wAAQPK/G+r/AADoT2qH/v8AANpAenNslQAA6E9qh2qVAAAiR16h/v8AACJHXqFqlQAA+zpijGqVAAD7OmKM/v8AAOJAMnP+/wAAxQ1S5Mr/AAC8DbEb5f8AANANAgBt1gAAAADoGzrhAAAAABnkOuEAAMwNAgCPKQAAPvIAAGbWAAD+/+gbOuEAADPyNOT3/wAAQPL7/4rWAAD+/xnkOuEAAE/yeADaKAAA/v8Z5MQeAAD//+gbxB4AADPy0RsCAAAAPvIZ5AAAAABL8pn/xigAAKsNgf8g1wAAyQ3//3EpAADXDbjkxgAAAL0N0xsFAAAAAAAZ5MQeAAAAAOgbxB4AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6q3rm"]
resource_name = "serure_Cylinder_001"
_surfaces = [{
"aabb": AABB(-0.11333319, -0.058092535, -0.037475884, 0.29149863, 0.12245808, 0.06784458),
"format": 34896613383,
"index_count": 216,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUAGAAZABoAGwAcAB0AGwAeABwAHwAgACEAHwAiACAAIwAkACUAIwAmACQAJwAoACkAKgArACwAKgAtACsALgAvADAALgAxAC8AMgAzADQANQA2ADcANQA4ADYAOQA6ADsAOQA8ADoAPQA+AD8AQAA+AD0APgBAAEEAQQBAAEIAPgBBAEMARABFAEYARwBIAEkARwBKAEgASwBMAE0ASwBOAEwATwBQAFEATwBSAFAAUwBUAFUAUwBWAFQAVwBYAFkAVwBaAFgAWwBcAF0AWwBeAFwAXwBgAGEAXwBiAGAAYwBkAGUAYwBmAGQAZABmAGcAYwBoAGYAYwBpAGgAaQBjAGoAaABpAGsAawBpAGwAbABpAG0AbgBvAHAAcQByAHMAdAB1AHYAdAB3AHUAeAB5AHoAeAB7AHkAfAB9AH4AfwCAAIEAfwCCAIAAgwCEAIUAgwCGAIQAhwCIAIkAigCLAIwAigCNAIsA"),
"material": SubResource("StandardMaterial3D_wndd0"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 142,
"vertex_data": PackedByteArray("qEkoQ2qV//+pQihD/v///6lCKENqlf//qEkoQ/7///8AAOgbOuFf3swNAgCPKV/eAADoG8QeX97QDQIAbdZf3v//6BvEHlv2PvIZ5AAAW/Yz8tEbAgBb9v7/GeTEHlv2/v/oGzrh///+/xnkxB7/////6BvEHv///v8Z5Drh//9A8r8b6v+31tANAgBt1rfWvA2xG+X/t9Y+8gAAZta31kDyvxvq//+/qUIoQ/7//7+oSShD/v//v7wNsRvl//+/vQ3TGwUAfugAAOgbxB5+6MwNAgCPKX7ovA2xG+X/Wq4AABnkOuFarsUNUuTK/1quAADoGzrhWq7JDf//cSls3gAAGeQ64WzeAAAZ5MQebN6rDYH/INds3kvymf/GKPn/qw2B/yDX+f/JDf//cSn5/0Dy+/+K1vn//v/oGzrhQds+8gAAZtZB20Dyvxvq/0HbqUIoQ/7////aQHpzbJX//6lCKENqlf//4kAyc/7////FDVLkyv+m1kDy+/+K1qbWM/I05Pf/ptarDYH/INem1jPy0RsCAJb4T/J4ANoolvj//+gbxB6W+E/yeADaKDr6/v/oGzrhOvr//+gbxB46+j7yAABm1jr6vQ3TGwUAW+8AABnkxB5b7wAA6BvEHlvv1w245MYAW++pQihDapUAwCBJU3ZqlQDAqEkoQ2qVAMDaQHpzbJUAwCJHXqFqlQDA+zpijGqVAMDoT2qHapUAwAAA6Bs64RrTvA2xG+X/GtPQDQIAbdYa0yJHXqH+/zTT6E9qh2qVNNMiR16hapU00+hPaof+/zTT+zpijP7/RP7aQHpzbJVE/uJAMnP+/0T++zpijGqVRP77OmKMapWG+SJHXqH+/4b5IkdeoWqVhvn7OmKM/v+G+TPy0RsCAPn/1w245MYA+f+9DdMbBQD5/z7yGeQAAPn//v/oGzrh49Yz8jTk9//j1v7/GeQ64ePWQPK/G+r/49bMDQIAjymq8TPy0RsCAKrxvQ3TGwUAqvFP8ngA2iiq8cwNAgCPKe//PvIAAGbW7/9P8ngA2ijv/9ANAgBt1u//xQ1S5Mr//r+pQihD/v/+v7wNsRvl//6/+zpijP7//r/iQDJz/v/+vyJHXqH+//6/QPK/G+r//r8z8jTk9//+v+hPaof+//6/IElTdv///r+oSShD/v/+vwAAGeTEHs791w245MYAzv3JDf//cSnO/T7yGeQAABDj/v8Z5MQeEONL8pn/xigQ4+hPaof+/7/XIElTdmqVv9foT2qHapW/1yBJU3b//7/X/v8Z5MQeLfpA8vv/itYt+kvymf/GKC36/v8Z5DrhLfoz8jTk9/8Q6kDy+/+K1hDq/v8Z5DrhEOoAABnkOuH/vwAA6BvEHv+/AAAZ5MQe/78AAOgbOuH/v8kN//9xKazxPvIZ5AAArPFL8pn/xiis8dcNuOTGAKzxxQ1S5Mr/OMQAABnkOuE4xKsNgf8g1zjEIElTdv//BcCoSShDapUFwCBJU3ZqlQXAqEkoQ/7/BcD/f/+//3//v/9//7//f/+/pL1J+aS9SfmkvUn5pL1J+WvGoldrxqJXa8aiV2vGolf/v/9//7//f/+//3//v/9/YW68YmFuvGJhbrxiYW68Yup/6n/qf+p/6n/qf+p/6n8YUd/nGFHf5xhR3+dQbZCgUG2QoFBtkKBQbZCgT3lPwk95T8JPeU/CT3lPwgKA+b8CgPm/AoD5vwKA+b/kgnpY5IJ6WOSCelhqBS49agUuPWoFLj1qBS49n5E4nZ+ROJ2fkTidn5E4neQw0MzkMNDM5DDQzG6exlNunsZTbp7GU26exlPrVHnK61R5yutUecrrVHnKAYD9fwGA/X8BgP1/AYD9fwGA/X8BgP1/AYD9f6pcwXCqXMFwqlzBcFG2bPtRtmz7UbZs+1G2bPu+G0guvhtILr4bSC6+G0guwpq7UMKau1DCmrtQwpq7UAHA9j8BwPY/AcD2PwHA9j+Slg5zkpYOc5KWDnOSlg5zMkGs2DJBrNgyQazYMkGs2AhA5/8IQOf/CEDn/whA5/8BgASAAYAEgAGABIABgASAAYAEgAGABIABgASAAYAEgAGABIABgASAAYAEgKZdJcCmXSXApl0lwHS8uC90vLgvdLy4L3F6McZxejHGcXoxxnF6McY/LGYePyxmHj8sZh4/LGYepplNlqaZTZammU2W/3////9/////f////3///9K+byfSvm8n0r5vJ9K+byeZirOqmYqzqpmKs6oVg/7/FYP+/xWD/v8Vg/7/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_l4msw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_86mh1"]
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0.5254902, 0.3137255, 0.15294118, 1)

[sub_resource type="QuadMesh" id="QuadMesh_wren3"]

[node name="door" type="StaticBody3D" groups=["interacteble"]]
transform = Transform3D(-4.3711385e-08, 0, -0.9999999, 0, 1, 0, 0.9999999, 0, -4.3711385e-08, 0, 0, 0)
script = ExtResource("1_k65k4")
locked = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.99999976, 0, 1.7881392e-07, 0, 1, 0, -1.7881392e-07, 0, 0.99999976, 0.12655905, 1.25, -0.7499998)
shape = SubResource("BoxShape3D_awui1")

[node name="door_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.99999994, 0, 2.9802322e-08, 0, 1, 0, -2.9802322e-08, 0, 0.99999994, 0.02655968, 0, 0)
material_override = ExtResource("2_lnww3")
mesh = SubResource("ArrayMesh_u2vld")
skeleton = NodePath("")

[node name="OccluderInstance3D3" type="OccluderInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.067137375, 1.2638333, -0.6923342)
occluder = SubResource("BoxOccluder3D_wren3")

[node name="serure" type="Node3D" parent="."]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 1.7617505, -1.1920929e-07, 0.22524476)

[node name="door_002" type="MeshInstance3D" parent="serure"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -1.6481757, 1.02714, -1.3881295)
material_override = ExtResource("3_1h7vw")
mesh = SubResource("ArrayMesh_6q3rm")
skeleton = NodePath("")

[node name="door_003" type="MeshInstance3D" parent="serure"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.7140265, 1.02714, -1.4527467)
material_override = ExtResource("3_1h7vw")
mesh = SubResource("ArrayMesh_6q3rm")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 0, -0.99999994, 0, 2.4088643, 0, 1.3236625, 0, 0, 0.09377374, 1.2691027, -0.69908154)
material_override = SubResource("StandardMaterial3D_86mh1")
mesh = SubResource("QuadMesh_wren3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.1571825e-07, 0, 0.9999999, 0, 2.408864, 0, -1.3236623, 0, -8.742276e-08, 0.09377374, 1.2691027, -0.69908154)
material_override = SubResource("StandardMaterial3D_86mh1")
mesh = SubResource("QuadMesh_wren3")

[node name="audio_open" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 0.10977395, 0, -0.7000037)
stream = ExtResource("5_drus2")
bus = &"effect"

[node name="audio_close" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 0.10977395, 0, -0.7000037)
stream = ExtResource("4_ddfkg")
bus = &"effect"

[node name="audio_locked" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1.0000001, 0, 0, 0, 1, 0, 0, 0, 1.0000001, 0.10977395, 0, -0.7000037)
stream = ExtResource("4_k4vsv")
volume_db = -10.0
bus = &"effect"
